Adding changes to the API for notification
